Fixed overflow text on work container

--- a/client_react/src/container/Work/Work.scss
+++ b/client_react/src/container/Work/Work.scss
@@ -74,6 +74,7 @@
       min-height: 650px;
     }
     @media screen and (max-width: 768px) {
+      height: auto;
       width: 100%;
       margin: 0 0 1rem 0;
     }
@@ -81,8 +82,8 @@
 
   .app__work-img {
     width: 100%;
-    min-height: 230px;
     position: relative;
+    height: 230px;
 
     img {
       width: 100%;
@@ -114,7 +115,7 @@
     }
   }
   @media screen and (max-width: 768px) {
-    width:100%; 
+    width: 100%;
   }
 }
 
@@ -125,7 +126,6 @@
   right: 0;
   bottom: 0;
   width: 100%;
-  height: 100%;
   background-color: rgba(0, 0, 0, 0.5);
   border-radius: 0.5rem;
 
